--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,5 +1,6 @@
-FIND_PACKAGE(PythonInterp REQUIRED)
+FIND_PACKAGE(Python3 COMPONENTS Interpreter)
 OPTION(BUILD_DOCS "Build documentation" ON) # ON/OFF
+SET(CMAKE_MACOSX_RPATH 1)
 IF (TASKSCH_BUILD_WITH_DOCS)
     ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/docs)
 ENDIF ()
