working on tests. organizing and cleaning.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,7 +17,7 @@ IF (BUILD_TESTS)
             ${Boost_INCLUDE_DIR})
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
     INCLUDE_DIRECTORIES(${UNIT_TESTS_INCLUDES})
-    ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)
+    ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBoost_NO_BOOST_CMAKE=TRUE)
     ADD_EXECUTABLE(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES})
     TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES})
     ADD_TEST(test_furi_boost ${PROJECT_UNIT_TESTS_NAME})
