realized the pattern for furi resolution. pattern resoltuion returns furis that match the pattern and non-pattern ID furs resolve to their pointed to obj. Genius. Basically leaf/node structure within the URI space.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,13 +13,12 @@ IF (BUILD_TESTS)
     FILE(GLOB UNIT_TESTS_SRC_FILES ${CMAKE_SOURCE_DIR}/test/structure/*_boost.cpp)
     SET(UNIT_TESTS_INCLUDES ${PROJECT_INCLUDE_DIR}
             ${CMAKE_SOURCE_DIR}/src
-            ${UNIT_TESTS_SRC_FILES}
             ${Boost_INCLUDE_DIR})
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
     INCLUDE_DIRECTORIES(${UNIT_TESTS_INCLUDES})
     ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBoost_NO_BOOST_CMAKE=TRUE)
     ADD_EXECUTABLE(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES})
-    TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES})
+    TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES} tsl::ordered_map paho-mqttpp3)
     ADD_TEST(test_furi_boost ${PROJECT_UNIT_TESTS_NAME})
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
     ####################################
