--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -78,6 +78,7 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process "test_scheduler" true)
     MAKE_TESTS(process/actor "test_actor" true)
     MAKE_TESTS(structure/router "test_router" true)
+    MAKE_TESTS(structure/stype/key_value "test_key_value" , false)
     MAKE_TESTS(structure "test_furi" false)
     MAKE_TESTS(module "test_fs" true)
     MAKE_TESTS(util "test_mutex" true)
