fhatty clean up and refactor. No more raw pointers on processes nor actors. a few more cleanups required . commiting my work for now. hours of effort needs to be saved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,7 +159,7 @@ IF (USE_LIBWEBSOCKETS)
 ENDIF ()
 ####################################
 ####################################
-### YAML: YAML PARSER IMPLEMENTATION
+### YAML: YAML parser_ IMPLEMENTATION
 OPTION(USE_YAML "YAML build" OFF) # ON/OFF
 IF (USE_YAML)
     FETCHCONTENT_DECLARE(
