language package reorg. added support for nested explainations in explain() rewrite.

--- a/conf/mosquitto.conf
+++ b/conf/mosquitto.conf
@@ -567,7 +567,7 @@ allow_anonymous true
 # topic [read|write|readwrite|deny] <topic>
 #
 # The access type is controlled using "read", "write", "readwrite" or "deny".
-# This parameter is optional (unless <topic> contains a space character) - if
+# This parameter is optional (unless <topic> contains a repeat character) - if
 # not given then the access is read/write.  <topic> can contain the + or #
 # wildcards as in subscriptions.
 #
