--- a/platformio.ini
+++ b/platformio.ini
@@ -110,19 +110,19 @@ build_flags =
     -DNATIVE
     -I build/_deps/paho-mqttpp3-src/include/
 test_filter =
-    #language/test_parser
-    #language/test_fluent
-    #structure/kernel/test_f_scheduler
+#language/test_parser
+#language/test_fluent
+#structure/kernel/test_f_scheduler
 test_ignore =
     CMakeFiles/**.*
-    #util/test_mutex
-    #structure/test_furi
-    #language/test_parser
-    #language/test_fluent
-    #language/test_obj
-    #language/test_binary_obj
-    #process/router/test_router
-    #process/actor/test_actor
+#util/test_mutex
+#structure/test_furi
+#language/test_parser
+#language/test_fluent
+#language/test_obj
+#language/test_binary_obj
+#process/router/test_router
+#process/actor/test_actor
 
 ###########################################
 ################## ESP32 ##################
@@ -132,7 +132,11 @@ extends = esp32
 #test_filter =
 #    structure/test_furi
 test_ignore =
-    CMakeFiles/**.*
+    structure/test_furi_boost
+    module/test_fs
+build_src_filter =
+    -<test/structure/test_furi_boost.cpp>
+
 #util/test_mutex
 #structure/test_furi
 #language/test_parser
