added two new instructions -- match() and subset(). Obj now implements Funtion<Obj,Obj> by simply redirectingto the apply() function. This makes C and mm-ADT defined functions look and feel the same way save C fucnction can't be introspected. package organzing.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -95,7 +95,7 @@ IF (BUILD_TESTS)
     MAKE_TESTS(structure/router "test_router" true)
     MAKE_TESTS(structure/stype/key_value "test_key_value" , true)
     MAKE_TESTS(structure "test_furi" false)
-    MAKE_TESTS(module "test_fs" true)
+    MAKE_TESTS(model "test_fs" true)
     MAKE_TESTS(util "test_mutex" true)
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
 ENDIF ()
