fixed a bug in language/test_obj for ESP32. Unity test framework doesn't support float comparison testing -- function not found. weird.

--- a/platformio.ini
+++ b/platformio.ini
@@ -133,7 +133,7 @@ extends = esp32
 #    structure/test_furi
 test_ignore =
     structure/test_furi_boost
-    module/test_fs
+    model/test_fs
 build_src_filter =
     -<test/structure/test_furi_boost.cpp>
 
