added ESP32 filesystem which extends base XFileSystem. MacOSX, Linux, and ESP32 now have filesystem support.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@
 
 [platformio]
 name = FhatOS
-description = A Message Passing Operating System for ESP32 and ESP8266 Microcontrollers
+description = A Distributed Operating System for ESP32 and ESP8266 Microcontrollers
 extra_configs = .wifi.ini
 
 ######################################
