renaming spree -- underscores instead of camel case.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -14,7 +14,8 @@ IF (BUILD_DOCS)
             MATH(EXPR COUNTER "${COUNTER}+1")
             MESSAGE(CHECK_START "${.y}CMaking ${PACKAGE_RUNNER}${..}")
             ADD_EXECUTABLE(${PACKAGE_RUNNER} ${CMAKE_SOURCE_DIR}/docs/src/${PACKAGE}/${PACKAGE_RUNNER}/${PACKAGE_RUNNER}.cpp)
-            TARGET_LINK_LIBRARIES(${PACKAGE_RUNNER} tsl::ordered_map paho-mqttpp3)
+            FIND_PACKAGE(ordered_map)
+            TARGET_LINK_LIBRARIES(${PACKAGE_RUNNER} ordered_map paho-mqttpp3)
             TARGET_PRECOMPILE_HEADERS(${PACKAGE_RUNNER} REUSE_FROM ${PROJECT_NAME})
             SET_TARGET_PROPERTIES(${PACKAGE_RUNNER} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/build"
