CMake tweaks. Incurred a bug around reducing barriers....dah.

--- a/platformio.ini
+++ b/platformio.ini
@@ -133,6 +133,8 @@ extends = esp32
 #    structure/test_furi
 test_ignore =
     structure/test_furi_boost
+    process/actor/test_actor
+    language/test_parser
     model/test_fs
 build_src_filter =
     +<**/*>
