Address Sanitizer configurable in CMake. fhat-dev script improved with more options for all targets. finally got starts() to work with new inst encodings. {} is now a valid type -- represents Objs (parsers accordingly). tweaks to mqtt driver -- still having memory issues when shutting down the connection. added more test cases to parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ IF (BUILD_NATIVE)
     FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
     IF (CMAKE_BUILD_TYPE MATCHES "DEBUG" AND SANITIZE MATCHES "ON")
+        MESSAGE(STATUS "${.g}-${.y}=${.r}Using Address Sanitizer${.y}=${.g}-${..}")
         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
     ENDIF ()
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
