fixed an unsigned int bug in parser. fixed a looping scope issue in mqtt connection.

--- a/conf/mosquitto.conf
+++ b/conf/mosquitto.conf
@@ -231,7 +231,7 @@
 # listener 0 /tmp/mosquitto.sock
 #
 # listener port-number [ip address/host name/unix socket path]
-listener 1883 rredux.local
+listener 1883 localhost
 
 # By default, a listener will attempt to listen on all supported IP protocol
 # versions. If you do not have an IPv4 or IPv6 interface you may wish to
