added test_mqtt which extends test_base_structure.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -94,6 +94,7 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process/actor "test_actor" true)
     MAKE_TESTS(structure/router "test_router" true)
     MAKE_TESTS(structure/stype/key_value "test_key_value" , true)
+    MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
     MAKE_TESTS(structure "test_furi" false)
     MAKE_TESTS(model "test_fs" true)
     MAKE_TESTS(util "test_mutex" true)
