solid push on to embedding. recurssive patterns work nicely and consistently with mm-ADTs URI resolution algorithm. Worked on CMake build a bit. MQTT test are built or not built depending if an MQTT broker is discovered on a netscan. Added more methods to fURI around patterns, retractions, and resolution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,9 +124,11 @@ IF (BUILD_NATIVE)
     ADD_DEFINITIONS("-DNATIVE")
     FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
-    IF (CMAKE_BUILD_TYPE MATCHES "DEBUG" AND SANITIZE MATCHES "ON")
-        MESSAGE(STATUS "${.g}-${.y}=${.r}Using Address Sanitizer${.y}=${.g}-${..}")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
+    IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
+        IF (SANITIZE)
+            MESSAGE(STATUS "${.g}-${.y}=${.r}Using Address Sanitizer${.y}=${.g}-${..}")
+            SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
+        ENDIF ()
     ENDIF ()
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ENDIF ()
@@ -241,7 +243,7 @@ FETCHCONTENT_MAKEAVAILABLE(mpc)
 #TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC mpc)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/mpc-src DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mpc)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/mpc-src DESTINATION ${CMAKE_SOURCE_DIR}/include/mpc)
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC  ${CMAKE_BINARY_DIR}/_deps/mpc-src)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/_deps/mpc-src)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 
 ####################################
