--- a/platformio.ini
+++ b/platformio.ini
@@ -73,8 +73,12 @@ esp32.s3 = esp32s3box
 [env]
 framework = arduino
 board_build.filesystem = littlefs
+fs_mount_src = src/model/common.mmadt
+fs_mount_dst = data/fs/model/
 test_framework = unity
-extra_scripts = pre:scripts/environment.py
+extra_scripts =
+    pre:scripts/environment.py
+    pre:scripts/fs_mount.py
 lib_deps =
     WiFi # necessary for ESPTelnet
     ArduinoOTA
